force-app/main/default/objects/ServiceClassSetting__mdt/ServiceClassSetting__mdt.object-meta.xml
<CustomObject>
    <description
  >Service Class Setting for override package classes</description>
    <label>Service Class Setting</label>
    <pluralLabel>Service Class Settings</pluralLabel>
</CustomObject>