force-app/main/default/objects/ServiceClassSetting__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description
  >Apex Class name which is override the functionality</description>
    <inlineHelpText
  >Apex Class name which is override the functionality</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>