force-app/main/default/objects/ServiceClassSetting__mdt/fields/ClassType__c.field-meta.xml
<CustomField>
    <fullName>ClassType__c</fullName>
    <description>Class Type indicate to categorize the apex class</description>
    <inlineHelpText>Class Type indicate to categorize the apex class</inlineHelpText>
    <label>Class Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller</fullName>
                <default>true</default>
                <label>Controller</label>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Helper</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Repository</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Resolver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>