force-app/main/default/objects/ServiceClassSetting__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Functionality is disabled</description>
    <inlineHelpText>Functionality is disabled</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>