force-app/main/default/objects/ServiceClassSetting__mdt/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <description>Description about the class functionality</description>
    <inlineHelpText>Description about the class functionality</inlineHelpText>
    <label>Functionality</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>